--- a/app/views/settlement/agreement.html
+++ b/app/views/settlement/agreement.html
@@ -30,7 +30,7 @@
 	      </div>
 	    </div>    
 	    
-	    <table class="table">
+	    <table class="table" ng-show="partnerAgreements.length > 0">
         <thead>
             <tr class="graybg">
                 <th>{{'table.heading.partnername' | translate}}</th>
