--- a/app/views/clients/editrevenushare.html
+++ b/app/views/clients/editrevenushare.html
@@ -1,4 +1,4 @@
- <div ng-controller="EditRevenueShareController>
+ <div ng-controller="EditRevenueShareController">
 		<ul class="breadcrumb">
 			<li><a href="#/clients">{{'link.clients' | translate}}</a> <span class="divider">/</span></li>
 			<li><a href="#/viewclient/{{formData.clientId}}">{{'link.view.client' | translate}}</a> <span class="divider">/</span></li>
