--- a/app/views/settlement/gameevent.html
+++ b/app/views/settlement/gameevent.html
@@ -62,11 +62,11 @@
             </thead>
             <tbody>
               <tr class="pointer-main" ng-repeat="fd in formData">
-                <td class="pointer"><a href="#/viewinteractivedetails/{{fd.id}}">{{fd.id}}</a></td><!-- editinteractivedetail -->
-                <td class="pointer"><a href="#/viewinteractivedetails/{{fd.id}}">{{fd.externalId}}</a></td>
-                <td class="pointer"><a href="#/viewinteractivedetails/{{fd.id}}">{{fd.activityMonth}}</a></td>
-                <td class="pointer"><a href="#/viewinteractivedetails/{{fd.id}}">{{fd.dataUploadedDate | DateFormat}}</a></td>
-                <td class="pointer"><a href="#/viewinteractivedetails/{{fd.id}}">{{fd.businessLine}}</a></td>
+                <td class="pointer" data-ng-click="routeTo(fd.id)">{{fd.id}}</td><!-- editinteractivedetail -->
+                <td class="pointer" data-ng-click="routeTo(fd.id)">{{fd.externalId}}</td>
+                <td class="pointer" data-ng-click="routeTo(fd.id)">{{fd.activityMonth}}</td>
+                <td class="pointer" data-ng-click="routeTo(fd.id)">{{fd.dataUploadedDate | DateFormat}}</td>
+                <td class="pointer" data-ng-click="routeTo(fd.id)">{{fd.businessLine}}</td>
                 <!-- <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.mediaCategory}}</a></td> -->
                 <!-- <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.chargeCode}}</a></td> -->
                 
