--- a/app/views/clients/addclientidentifierdocument.html
+++ b/app/views/clients/addclientidentifierdocument.html
@@ -1,12 +1,61 @@
 <div ng-controller="UploadClientIdentifierDocumentController">
 	<div>
 		<ul class="breadcrumb">
+        <table>
+        <tr>
+        <td>
+        	 <img ng-hide="imagePresent" src="../app/images/blank_avatar.jpg" alt="Avatar" width="40">
+          <img ng-show="imagePresent" src="{{image}}" alt="Avatar" width="40">
+        </td>
+        <td>
+            <small style="color:black;">{{displayName}}</small>
+            &nbsp;
+            <i class="icon-circle {{statusActive | StatusLookup}}"></i>
+        </td>
+        <td><small style="font-size:30px;">|</small></td>
+        <td>
+        <table>
+        	<tr>
+        		<td><small>Uniquely identified  {{accountNo}}</small></td>
+        	</tr>
+        	<tr>
+        		<td><i class="icon-building"></i><small>Office "{{officeName}}"</small></td>
+        	</tr>
+        </table>
+        </td>
+        <td><small style="font-size:30px;">|</small></td>
+        <td>
+        <table>
+        	<tr>
+        		<td><small>Cell Phone {{phone}}</small></td>
+        	</tr>
+        	<tr>
+        		<td><small>Device # <strong>{{hwSerialNumber}}</strong></small></td>
+        	</tr>
+        </table>
+        </td>
+        <td><small style="font-size:30px;">|</small></td>
+        <td>
+        <table>
+        	<tr>
+        		<td><small>Client Type "{{categoryType}}"</small></td>
+        	</tr>
+        	<tr>
+        		<td><small>Balance&nbsp;{{balanceAmount}}&nbsp;{{currency}} </small></td>
+        	</tr>
+        </table>
+        </td>
+        </tr>
+        </table>
+	</ul>
+		<ul class="breadcrumb">
 			<li><a href="#/clients">{{'link.clients' | translate}}</a> <span class="divider">/</span></li>
 			<li><a href="#/viewclient/{{clientId}}">{{'link.view.client' | translate}}</a> <span class="divider">/</span></li>
 			<li class="active">{{'link.upload.document' | translate}}</li>
 		</ul>
 	</div>
 	<form name="clientidentifierform" novalidate="" class="form-horizontal well" ng-submit="submit()">
+	        
 	 <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
 		<label ng-show="errorStatus">{{errorStatus}}</label>
@@ -18,7 +67,7 @@
 			<div class="control-group">
 				<label class="control-label" for="name">{{'label.name' | translate}}<span class="required">*</span></label>
 				<div class="controls">
-					<input type="text" name="name" ng-model="formData.name" required late-Validate/>
+				<input id="name" ng-autofocus="true" type="text" name="name" ng-model="formData.name" class="form-control" required late-Validate/>
 					<span  ng-show="clientidentifierform.name.$invalid">
 	                    <small class="error" ng-show="clientidentifierform.name.$error.req">
 	                        Required Field
@@ -30,7 +79,7 @@
 			<div class="control-group">
 				<label class="control-label" for="file">{{'label.select.file' | translate}}<span class="required">*</span></label>
 				<div class="controls">
-					<input type="file" ng-file-select="onFileSelect($files)">
+			<input type="file" id="file" ng-file-select="onFileSelect($files)">
 				</div>
 			</div>
 
