--- a/app/views/settlement/editpartneragreement.html
+++ b/app/views/settlement/editpartneragreement.html
@@ -15,7 +15,7 @@
         </li>
         </ul>
      <ul class="breadcrumb">
-              <li><a ng-click="tabStatus()" href="#/game">{{'label.partneragreement'| translate}}</a> <span class="divider">/</span></li>
+			 <li><a href="#/game">Partners</a> <span class="divider">/</span></li>
               <li><a  href="#/viewpartneragreement/{{resouresId}}" >{{'label.viewpartneragreement'| translate}}</a><span class="divider">/</span></li>
               <li class="active">{{'label.editpartneragreement'| translate}}</li>
           </ul>
