--- a/app/views/trackinvoice/trackinvoice.html
+++ b/app/views/trackinvoice/trackinvoice.html
@@ -1,12 +1,12 @@
-<div ng-controller="PurchaseOrderController">
+<div ng-controller="TrackInvoiceController">
  <div>
 		<ul class="breadcrumb">
 			<li><a href="#/game">Partners</a> <span class="divider">/</span></li>
 			<li><a href='#/viewpartneraccount/{{resourceId}}'>{{'label.viewpartneraccount' | translate}}</a> <span class="divider">/</span></li>
-			<li class="active">Purchase Order</li>
+			<li class="active">Track Invoice</li>
 		</ul>
 	</div>
-	 <form name="purchaseorder" class="form-horizontal well">
+	 
 	  
 	    <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
@@ -15,7 +15,7 @@
 	    </div>  
 	    
         <fieldset>
-          <legend>{{'label.purchaseorder' | translate}}</legend>
+          <legend>{{'label.trackinvoice' | translate}}</legend>
           <br>
           
        <div> 
@@ -53,33 +53,29 @@
                		<th>{{'label.activitymonth' | translate}}</th>
               	    <th>{{'label.podate' | translate}}</th>
                     <th>{{'lable.amount' | translate}}</th>
-                	<th>{{'label.outstanding' | translate}}</th>
                 	<th>{{'label.disburse.status' | translate}}</th>
-                	<th>{{'label.add' | translate}}</th>
-                	<th>{{'label.delete' | translate}}</th>
+                	<th>{{'label.invoice.number' | translate}}</th>
+                	<th>{{'label.invoice.date' | translate}}</th>
+                	<th>{{'label.update' | translate}}</th>
             	</tr>
        		</thead>
         	<tbody>
             	 <tr ng-repeat="pData in purchaseOrderData">
-            		<td><input class="input-medium" type="text" ng-model="pData.purchaseOrderNo" readonly/></td>
-            		<td><input class="input-small" type="text" ng-model="pData.activityMonth" readonly/></td>
-                	<td><input  class="input-small" type="text" id="startDate" datepicker-pop="dd MMMM yyyy" ng-model="pData.purchasrOrderDate" is-open="opened"  
-              date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/></td>
-                	<td><input class="input-small" type="text" ng-model="pData.royaltyAmount" ng-change="calculate()"/></td>
-                	<td><input class="input-small" type="text" ng-model="pData.outStandingAmount" readonly/></td>
-                    <td><select class="input-medium" ng-model="pData.status" id="status" ng-options="pn.id as pn.mCodeValue for pn in disbursmentStatusData" value="{{pn.mCodeValue}}">
-					</select><!-- <input class="input-small" type="text" ng-model="pData.status" /> --></td>
-                    <td><button class="btn btn-primary" ng-click="addRow($index)">Add</button></td>
-                    <td><button class="btn" ng-click="removeRow($index)">Delete</button></td>
+            		<td><label>{{pData.purchaseOrderNo}}</label><!-- <input class="input-medium" type="text" ng-model="pData.purchaseOrderNo" readonly/> --></td>
+            		<td><label>{{pData.activityMonth}}</label><!-- <input class="input-small" type="text" ng-model="pData.activityMonth" readonly/> --></td>
+                	<td><label>{{pData.purchasrOrderDate | DateFormat}}</label><!-- <input class="input-small" type="text" ng-model="pData.purchasrOrderDate" readonly/> --></td>
+                	<!-- <td><input  class="input-small" type="text" id="startDate" datepicker-pop="dd MMMM yyyy" ng-model="pData.purchasrOrderDate" is-open="opened"  
+              date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/></td> -->
+                	<td><label>{{pData.royaltyAmount}}</label><!-- <input class="input-small" type="text" ng-model="pData.royaltyAmount" readonly/> --></td>
+                    <td><label>{{pData.statusStr}}</label><!-- <input class="input-small" type="text" ng-model="pData.status" readonly/> --></td>
+                    <td><input class="input-small invoiceNumber{{pData.id}}" type="text" ng-model="pData.invoiceNumber"/></td>
+                    <td><input class="input-small" type="text" id="startDate" datepicker-pop="dd MMMM yyyy" ng-model="pData.invoiceDate" is-open="opened" date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;" readonly/></td>
+                    <td><button class="btn btn-primary invoiceNumber{{pData.id}}" ng-click="update(pData.id,$index)">Update</button></td>
              	</tr>
         	</tbody>
 		</table>
 		<br>
-		<div class="offset3">
-            <a href='#/viewpartneraccount/{{resourceId}}' class="btn">{{'button.cancel' | translate}}</a>
-          <button class="btn btn-primary" ng-click="submit()">{{'button.save' | translate}}</button>
-          </div>	
 	</div>
 		</fieldset>
-	</form>
+	
 </div>
